Fix Card img overflow border

--- a/src/Card.css
+++ b/src/Card.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     padding: 0;
+    overflow:hidden;
 }
 
 .Card img {
